--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -120,8 +120,8 @@
 }
 
 .result{
-    padding: 0 5%;
-    max-width: 90vh;
+    padding: 0px 5%;
+    max-height: 70vh;
     overflow-y: scroll;
 }
 
@@ -130,7 +130,7 @@
 }
 
 .result-title{
-    margin: 40px 0;
+    margin: 40px 0px;
     display: flex;
     align-items: center;
     gap: 20px;
@@ -138,11 +138,43 @@
 
 .result img{
     width: 40px;
-    border-radius: 50px;
+    border-radius: 50%;
 }
 
 .result-data{
     display: flex;
     align-items: start;
     gap: 20px;
+}
+
+.loader{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.loader hr{
+    border-radius: 4px;
+    border: none;
+    background-color: #f6f7f8;
+    background: linear-gradient(to right,#9ed7ff,#ffffff,#9ed7ff);
+    background-size: 800px 50px;
+    height: 20px;
+    animation: loader 3s infinite linear;
+}
+
+@keyframes loader {
+    0%{
+        background-position: -800px 0;
+    }
+    100%{
+        background-position: 800px 0;
+    }
+}
+
+.result-data p{
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 1.8;
 }
